add task eval types, sources, authors, versions

--- a/flyway.conf
+++ b/flyway.conf
@@ -2,3 +2,4 @@ flyway.url=jdbc:postgresql://localhost:5432/proglv
 flyway.user=proglv 
 flyway.password=proglv
 flyway.locations=filesystem:./flyway-migrations
+flyway.cleanDisabled=false
