--- a/local-proglv-db/compose.yml
+++ b/local-proglv-db/compose.yml
@@ -1,7 +1,6 @@
 version: '3.1'
 
 services:
-
   postgres:
     image: postgres:latest
     restart: always
@@ -14,5 +13,19 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: 'admin@programme.lv'
+      PGADMIN_DEFAULT_PASSWORD: 'proglv'
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+
 volumes:
   postgres_data:
+  pgadmin_data:
+
