add another author for testing

--- a/seed-database/data/summa/problem.toml
+++ b/seed-database/data/summa/problem.toml
@@ -2,7 +2,7 @@ code = "summa"
 name = "Summa"
 version = 1
 
-authors = ["Krišjānis Petručeņa"]
+authors = ["Krišjānis Petručeņa", "Antons Maizītis"]
 tags = ["math"]
 
 type = "simple"
