--- a/flyway.conf
+++ b/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://postgres:5432/proglv
+flyway.url=jdbc:postgresql://localhost:5432/proglv
 flyway.user=proglv 
 flyway.password=proglv
 flyway.locations=filesystem:./flyway-migrations
